# foodgram

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: main.old  main.yml  old_ver.yml_
backend/: .dockerignore  Dockerfile  conftest.py  datadump.json  db (copy).sqlite3  db (copy).sqlite3.bak  db-all.json  db-no-excludes.json  db-test.sqlite3  db-test.sqlite3.bak  db.json  db.sqlite3  db.sqlite3 (copy).bak  db.sqlite3.bak  fromWebinar.py  ingredients_eng_alphasorted.csv  mypy.ini  output.txt  pytest.ini  requirements.txt
backend/api/: filters.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
backend/api/management/commands/: clear_cache.py  import_csv.py
backend/backend/: asgi.py  constants.py  settings.py  urls.py
backend/collected_static/admin/js/: calendar.js
backend/locale/en/LC_MESSAGES/: django.po
backend/locale/ru/LC_MESSAGES/: django.po
backend/recipes/: admin.py  apps.py  forms.py  models.py  tests.py  tests_redo.py  validators.py
backend/recipes/migrations/: 0001_initial.py  0001_squashed_0015_alter_recipeingredient_options_alter_recipe_image.py  0002_alter_recipeingredient_options.py  0002_alter_tag_color.py  0002_ingredient.py  0002_recipe_cooking_time.py  0002_recipe_image.py  0002_shoppingcart_unique_shoppping_user_recipe.py  0003_alter_ingredient_options_and_more.py  0003_alter_recipe_cooking_time.py  0003_alter_recipe_options_recipe_pub_date.py  0003_alter_tag_color.py  0003_remove_favorite_unique_favorite_user_recipe_and_more.py  0004_alter_ingredient_name.py  0004_alter_recipe_pub_date.py  0004_alter_tag_color.py  0004_favorite_unique_favorite_user_recipe_and_more.py  0004_recipe_tags.py  0005_alter_ingredient_name_and_more.py  0005_alter_recipe_options.py  0005_alter_shoppingcart_recipe_alter_shoppingcart_user.py  0005_alter_tag_color.py  0005_remove_recipe_tags_recipe_tags.py  0006_alter_ingredient_name.py  0006_alter_recipeingredient_ingredient.py  0006_alter_tag_color.py  0006_alter_tag_options_alter_recipe_tags_alter_tag_name.py  0006_remove_shoppingcart_unique_shoppping_user_recipe_and_more.py  0007_alter_favorite_recipe_alter_favorite_user_and_more.py  0007_alter_recipeingredient_ingredient.py  0007_alter_tag_color.py  0007_recipe_recipeingredient.py  0007_remove_recipe_tags_recipe_tags.py  0008_alter_recipe_options_remove_recipe_pub_date.py  0008_alter_subscription_author.py  0008_alter_tag_options.py  0008_favorite_favorite_unique_favorite_user_recipe.py  0009_alter_subscription_user.py  0009_recipe_pub_date.py  0010_alter_recipe_options.py  (+16 more)
backend/recipes/tests/: conftest.py  test_routes.py  test_try.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  user_tests.bkp  user_tests.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0002_alter_customuser_options.py  0003_alter_customuser_email.py  0003_subscription_and_more.py  0004_alter_customuser_first_name_and_more.py  0005_alter_customuser_managers.py
backend/users/tests/: test_base.py  test_content.py  test_logic.py  test_routes.py  test_trial.py
data/: ingredients_eng.csv  readme.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/api/: index.js
frontend/src/components/account-menu/: index.js
frontend/src/components/card/: index.js
frontend/src/components/file-input/: index.js
frontend/src/components/footer/: index.js
frontend/src/components/purchase/: index.js
frontend/src/components/subscription/: index.js
frontend/src/configs/: navigation.js
frontend/src/pages/cart/: index.js
frontend/src/pages/change-password/: index.js
frontend/src/pages/favorites/: index.js
frontend/src/pages/main/: index.js
frontend/src/pages/recipe-create/: index.js
frontend/src/pages/recipe-edit/: index.js
frontend/src/pages/signin/: index.js
frontend/src/pages/signup/: index.js
frontend/src/pages/single-card/: index.js
frontend/src/pages/single-card/description/: index.js
frontend/src/pages/single-card/ingredients/: index.js
frontend/src/pages/subscriptions/: index.js
frontend/src/pages/user/: index.js
infra/: .env.example  docker-compose.production.yaml  docker-compose.yaml  docker-compose.yml  docker-compose.yml_fail  nginx.conf  server_nginx.conf
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
